# safe-guard

./: .env.example  .gitignore  CONFIG.md  Cargo.toml  README.md  build.rs  plan.md
docs/: API_SPEC.md  EXTENSION_MIGRATION.md  cofre_api.postman_collection.json
installer/windows/: cofre_api.iss  register_task.ps1  unregister_task.ps1
scripts/windows/: build_setup.ps1  install_cofre_api.cmd  install_cofre_api.ps1  uninstall_cofre_api.cmd  uninstall_cofre_api.ps1
src/: lib.rs  main.rs
ui-tauri/: index.html  package.json
ui-tauri/src/: main.ts  styles.css
ui-tauri/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri/src-tauri/src/: main.rs
