[package]
name = "cofreSenhaRust"
version = "0.1.5"
edition = "2024"

[dependencies]
axum = "0.8"
argon2 = "0.5"
base64 = "0.22"
chacha20poly1305 = "0.10"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
dotenv = "0.15"
iced = { version = "0.12", features = ["debug", "image"] }
rand = "0.8"
serde_yaml = "0.9"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "net"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tray-item = "0.7"

[build-dependencies]
winres = "0.1"
