[package]
name = "cofre_tauri"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
arboard = "3.6"
cofreSenhaRust = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2" }
uuid = { version = "1.11", features = ["v4"] }
